--- a/src/app/rekening-koran/cetakrekening/cetakrekening.component.html
+++ b/src/app/rekening-koran/cetakrekening/cetakrekening.component.html
@@ -13,7 +13,7 @@
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">No Rekening Pertama</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="int" class="form-control"></div>
+              <div class="col-3"><input type="text" class="form-control"></div>
               <span class="col-6"></span>
             </div>
             <!--input1-->
@@ -22,7 +22,7 @@
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">No Rekening Terakhir</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
-              <div class="col-3"><input type="int" class="form-control"></div>
+              <div class="col-3"><input type="text" class="form-control"></div>
               <span class="col-6"></span>
             </div>
             <!--input 2-->
