--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -49,8 +49,19 @@
               <a class="dropdown-item" [routerLink]="['/maintenance/tutupuser']">Tutup User</a>
               <a class="dropdown-item" [routerLink]="['/maintenance/gantisandioveride']">Ganti Sandi Over Ride</a>
               <a class="dropdown-item" [routerLink]="['/maintenance/role']">Pencarian Role</a>
+              <a class="dropdown-item" [routerLink]="['/maintenance/refresh']">Refresh User</a>
             </div>
           </div>
+
+          <div class="btn-group" mdbDropdown>
+              <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
+                Nasabah
+              </button>
+              <div class="dropdown-menu dropdown-primary">
+                  <a class="dropdown-item" [routerLink]="['/nasabah/daftarnasabah']">Daftar Kode Nasabah</a>
+                  <a class="dropdown-item" [routerLink]="['/nasabah/carinasabah']">Pencarian Nasabah</a>
+              </div>
+            </div>
 
           <div class="btn-group" mdbDropdown>
             <button mdbDropdownToggle type="button" mdbBtn color="primary" class="dropdown-toggle" mdbWavesEffect>
