--- a/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
+++ b/src/app/usermaintenance/kontrol-user/kontrol-user.component.html
@@ -13,12 +13,12 @@
                 <table class="table table-striped table-hover table-bordered" style="height:25px; text-align:center;">
                   <thead class="thead-light">
                     <tr>
-                      <th style="width:4%;line-height: 1.2">User ID</th>
-                      <th style="width:24%;line-height: 1.2">Nama</th>
-                      <th style="width:15%;line-height: 1.2">Login Terakhir</th>
-                      <th style="width:15%;line-height: 1.2">Logout Terakhir</th>
-                      <th style="width:8%;line-height: 1.2">Status</th>
-                      <th style="width:10%;line-height: 1.2">Kode Departemen</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:4%;line-height: 1.2">User ID</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:24%;line-height: 1.2">Nama</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:15%;line-height: 1.2">Login Terakhir</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:15%;line-height: 1.2">Logout Terakhir</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:8%;line-height: 1.2">Status</th>
+                      <th class="col-form-label pr-0 font-weight-bold" style="width:12%;line-height: 1.2">Kode Departemen</th>
                     </tr>
                     <tr *ngFor="let record of ktrlusers; let i = index; let evenRecords = even; let oddRecords = odd;let firsRecords = first; let lastRecords = last;" [ngClass]="{odd:oddRecords, even:evenRecords, first : firsRecords, last : lastRecords}">
                       <td style="line-height: 0.5;">{{record.UserId}}</td>
@@ -32,7 +32,7 @@
                 </table>
                 <div class="d-flex justify-content-center">
                   <button type="button" class="btn btn-primary btn-rounded">Buka</button>
-                  <button type="button" class="btn btn-primary btn-rounded">Tutup Sendiri</button>
+                  <button type="button" class="btn btn-primary btn-rounded">Tutup</button>
                 </div>
               </form>
             </div>
