--- a/src/app/nasabah/pencarian-nasabah/komponen/ubah-data-tambahan/ubah-data-tambahan.component.html
+++ b/src/app/nasabah/pencarian-nasabah/komponen/ubah-data-tambahan/ubah-data-tambahan.component.html
@@ -3,10 +3,10 @@
 <div class="form-group row">
   <label class="col-2 col-form-label font-weight-bold">Ibu Kandung</label>
   <label class="col-form-label pr-0  font-weight-bold">:</label>
-  <div class="col-3"><input type="text" class="form-control"></div>
+  <div class="col-3"><input type="text" class="form-control" value="ABCDEFGHIJKLMNOPQRSTUVWXYZ"></div>
   </div>
 <!--baris 1-->
 <div class="d-flex justify-content-end">
     <button type="button" class="btn btn-primary">Proses</button>
-  <button type="button" class="btn btn-primary" (click)="funcUbahPersonal()">Kembali</button>
+  <button type="button" class="btn btn-primary" (click)="funcUbahDataTambahan()">Kembali</button>
 </div>
