--- a/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
+++ b/src/app/teller-in/teller-in-pindah-buku-beda-uang/teller-in-pindah-buku-beda-uang.component.html
@@ -85,11 +85,9 @@
               <span class="col-6"></span>
             </div>
             <!--input 7-->
-            <tr>
-              <td colspan="8">
-                <hr>
-              </td>
-            </tr>
+            <div>
+              <hr>
+            </div>
             <div class="form-group row">
               <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">ALAT BANTU</label>
             </div>
@@ -97,35 +95,32 @@
               <span class="col-2"></span>
               <label class="col-2 col-form-label font-weight-bold">Mata Uang Rekening Debit</label>
               <span class="col-2"></span>
-              <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
               <label class="col-3 col-form-label font-weight-bold">Mata Uang Rekening Kredit</label>
             </div>
             <div class="form-group row">
               <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi Debit</label>
               <div class="col-2">
-                <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 200px;">
+                <select class="custom-select" name="optkodempn" id="optkodempn">
                   <option selected>Pilih Salah Satu</option>
                   <option value="1">One</option>
                   <option value="2">Two</option>
                   <option value="3">Three</option>
                 </select>
               </div>
-              <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+              <span class="col-1"></span>
               <label class="col-2 col-form-label  font-weight-bold">Nilai Ekuivalen</label>
               <div class="col-2">
-                <select class="custom-select" name="optkodempn" id="optkodempn" style="width: 200px;">
-                  <option selected>Pilih Salah Satu</option>
-                  <option value="1">One</option>
-                  <option value="2">Two</option>
-                  <option value="3">Three</option>
-                </select>
+                  <select class="custom-select" name="optkodempn" id="optkodempn">
+                    <option selected>Pilih Salah Satu</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                  </select>
               </div>
-              <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
               <label class="col-2 col-form-label  font-weight-bold">Nilai Transaksi Kredit</label>
             </div>
             <div class="form-group row">
               <div class="col-2"><input type="text" class="form-control"></div>
-              <span></span>
               <label>x</label>
               <span>&nbsp;</span>
               <div class="col-2"><input type="text" class="form-control"></div>
