add new nasabah

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -60,6 +60,7 @@
               <div class="dropdown-menu dropdown-primary">
                   <a class="dropdown-item" [routerLink]="['/nasabah/daftarnasabah']">Daftar Kode Nasabah</a>
                   <a class="dropdown-item" [routerLink]="['/nasabah/carinasabah']">Pencarian Nasabah</a>
+                  <a class="dropdown-item" [routerLink]="['/nasabah/buatnasabahbaru']">Pembuatan Nasabah Baru</a>
               </div>
             </div>
 
