--- a/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
+++ b/src/app/nasabah/pencarian-nasabah/portofolio-cif/portofolio-cif.component.html
@@ -129,7 +129,12 @@
               </div>
               <!--isi tab data saldo rekening -->
 
-              <div *ngIf="kontenTabungan[3]" role="tabpanel" class="tab-pane active">isi 4 </div>
+              <!--isi tab data saldo rekening -->
+              <div *ngIf="kontenTabungan[3]" role="tabpanel" class="tab-pane active">
+                  <app-mutasi></app-mutasi>  
+              </div>
+              <!--isi tab data saldo rekening -->
+              
               <div *ngIf="kontenTabungan[4]" role="tabpanel" class="tab-pane active">isi 5 </div>
               <div *ngIf="kontenTabungan[5]" role="tabpanel" class="tab-pane active">isi 6 </div>
             </div>
