--- a/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
+++ b/src/app/nasabah/pencarian-nasabah/pembuatan-nasabah-baru/pembuatan-nasabah-baru.component.html
@@ -51,13 +51,14 @@
               <label class="col-2 col-form-label  font-weight-bold">Masukkan Nilai</label>
               <label class="col-form-label pr-0  font-weight-bold">:</label>
               <div class="col-3"><input type="text" class="form-control"></div>
-              <span class="col-6"></span>
-            </div>
-            <!--input 2-->
-            <div class="d-flex justify-content-center">
-                <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Cari</button>
+              <div class="input-group-append" id="button-addon4">
+                <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Cari</button>
               </div>
-
+            </div>
+            
+            <div>
+              <hr>
+            </div>
             <div class="form-group row">
                 <label class="col-2 col-form-label font-weight-bold" style="color: #2bbbad">Pembuatan Nasabah Baru</label>
             </div>
@@ -70,11 +71,11 @@
                     <option value="2">Retail</option>
                   </select>
                 </div>
+                <div class="input-group-append" id="button-addon4">
+                    <button mdbBtn color="primary" size="sm" class="m-0 px-3 py-2" type="button" mdbWavesEffect>Tambah</button>
+                  </div>
               </div>
-
-            <div class="d-flex justify-content-center">
-              <button type="button btn-md" mdbBtn color="primary" mdbWavesEffect>Tambah</button>
-            </div>
+              
           </mdb-card-body>
         </mdb-card>
 
